--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<a href="https://youtu.be/llqWa8gukho" target="_blank">
+			My current favourite song is Teliyade Teliyade
+		</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
